# AI_and_MachineLearning_at_Databricks

./: .gitignore  README.md  pyproject.toml
1_data_query_and_visualization/: add_two_numbers.py  import_query_and_data_visualization.ipynb  importing_a_module.ipynb  multiplication_of_two_real_numbers.ipynb
2_medallion_architecture_and_env_in_databricks/: medallion_env_databricks.ipynb
3_Implementation_of_Multiple_LinearRegression/: multiple_linear_regression.ipynb
