[project]
name = "projeto-databricks"
version = "0.1.0"
description = "Aqui vamos a usar a plataforma da Databricks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "databricks-cli>=0.18.0",
    "databricks-connect>=15.0,<16.0",
    "ipykernel>=6.30.1",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
]
